--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "mongoose": "^7.4.4",
     "socket.io": "^4.7.2"
   }
